
/*
 * Copyright 1999-2020 Alibaba Group Holding Ltd.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.alibaba.nacos.api.grpc";

message GrpcMetadata {

    string name = 1;

    string client_ip=2;

    string connection_id=3;

    google.protobuf.Timestamp create_time = 4;

    string version = 5;

    map<string,string> labels = 6;
}

message GrpcRequest {

    string type = 2;
    // Common metadata describing the resource.
    GrpcMetadata metadata = 1;
    // The primary payload for the resource.
    google.protobuf.Any body = 3;
}


message GrpcResponse {
    int32 code = 1;
    // reponse body
    google.protobuf.Any body = 2;
    string ack = 4;
    string type = 3;

}

service RequestStream {
    // build a streamRequest
    rpc requestStream (GrpcRequest) returns (stream GrpcResponse) {}
}

service Request {
    // Sends a commonRequest
    rpc request (GrpcRequest) returns (GrpcResponse) {}
}
